Implementing track ahead/back RPCs
