# vlcclient/playback.go
@@ -12,3 +12,25 @@ func (c Client) PlayPause() error {
 	// Success!
 	return nil
 }
+
+func (c Client) TrackAhead() error {
+	err := c.Do("/requests/status.json", map[string]string{
+		"command": "pl_next",
+	}, nil)
+	if err != nil {
+		return fmt.Errorf("TrackAhead: %w", err)
+	}
+	// Success!
+	return nil
+}
+
+func (c Client) TrackBack() error {
+	err := c.Do("/requests/status.json", map[string]string{
+		"command": "pl_previous",
+	}, nil)
+	if err != nil {
+		return fmt.Errorf("TrackBack: %w", err)
+	}
+	// Success!
+	return nil
+}
